@@ -477,4 +477,11 @@ test 28 = `ltl2tgba -D -G -S --stats=%s "$f"`
 
 # Issue #443.  This used to be too long.
 f='(!(G({(a)} |=> {(b)[*32]})))'
-test 34 = `ltl2tgba -B --stats=%s "$f"`
+test 34,0 = `ltl2tgba -B --stats=%s,%d "$f"`
+# Issue #444.  Because WDBA-minimization disables itself for large
+# automata, the output is only deterministic up to a certain point,
+# and the goal is to raise that point.
+f='(!(G({(a)} |=> {(b)[*9]})))'
+test 11,1 = `ltl2tgba -B --stats=%s,%d "$f"`
+f='(!(G({(a)} |=> {(b)[*10]})))'
+test 12,0 = `ltl2tgba -B --stats=%s,%d "$f"`
